deutsch version updated

--- a/de.html
+++ b/de.html
@@ -15,9 +15,9 @@
 
     <!-- CSS Links-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> <!--Bootstrap-->
-    <link type="text/css" rel="stylesheet" href="css/responsive-tabs.css"/>
+    <link type="text/css" rel="stylesheet" href="css/responsive-tabs_de.css"/>
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_de.css">
 
     <!-- Title and Favicon-->
     <title>Arash Heidari | Personal Website</title>
@@ -130,14 +130,20 @@
                 <div class="container">
                   <div class="row text-center contact-justifier">
                     <div class="col-md-3 about-status wow fadeInDown">
-                      <h5 class="about-status-h5">Geburtsort</h5>
+                      <h5 class="about-status-h5-small">Geburts-ort</h5>
+                      <h5 class="about-status-h5-med">Geburtsort</h5>
+                      <h5 class="about-status-h5-big">Geburtsort</h5>
+                      <h5 class="about-status-p-med"><br></h5>
                       <p>Teheran, Iran</p>
                     </div>
                     <div class="col-md-3 about-status wow fadeInDown">
-                      <h5 class="about-status-h5">Geburtsdatum</h5>
-                      <p>7. April, 1994</p></div>
+                      <h5 class="about-status-h5-small">Geburts-datum</h5>
+                      <h5 class="about-status-h5-med">Geburts-datum</h5>
+                      <h5 class="about-status-h5-big">Geburtsdatum</h5>
+                      <p>7. April 1994</p></div>
                     <div class="col-md-3 about-status wow fadeInDown">
-                      <h5 class="about-status-h5">Ehe-status</h5>
+                      <h5 class="about-status-h5">Ehe-Status</h5>
+                      <h5 class="about-status-p-med"><br></h5>
                       <p>Ledig</p>
                     </div>
                   </div>
@@ -164,18 +170,18 @@
               <div class="col-md-4">
                 <div class="about-item text-center">
                   <i class="about-icon fa fa-microchip"></i>
-                  <h3>Electronics</h3><br>
+                  <h3>Elektrotechnik</h3><br>
                   <hr>
-                  <p>I have a solid understanding of the hardware and functionality of Microcontrollers. Other than bare-metal C Programming, I can use other tools like RTOS.</p>
+                  <p>Ich habe ein klares Verständnis für die Hardware und Funktionalität von Mikrocontrollern. Neben der Bare-Metal-C und C++ Programmierung kann ich auch andere Tools wie RTOS verwenden.</p>
                 </div>
               </div>
 
               <div class="col-md-4">
                 <div class="about-item text-center">
                   <i class="about-icon fa fa-robot"></i>
-                  <h3>Machine<br>Learning</h3>
+                  <h3>Maschinelles<br>Lernen</h3>
                   <hr>
-                  <p>I have a great understanding of traditional Machine Learning algorithms. Besides, I can use Deep Learning algorithms and frameworks to conduct projects.</p>
+                  <p>Ich habe ein großes Verständnis für traditionelle Algorithmen für maschinelles Lernen. Außerdem kann ich Deep Learning-Algorithmen und Frameworks verwenden, um Projekte durchzuführen.</p>
                 </div>
               </div>
 
@@ -184,7 +190,7 @@
                   <i class="about-icon fa fa-laptop-code"></i>
                   <h3>Programming</h3><br>
                   <hr>
-                  <p>Other than Embedded development, I enjoy designing GUI for Desktop and Smartphones. Web Development is my other field of interest, although I'm not perfect.</p>
+                  <p>Abgesehen von der Embedded-Entwicklung entwerfe ich gerne GUI für Desktop und Smartphones. Webentwicklung ist mein anderes Interessengebiet, obwohl ich nicht der Beste bin.</p>
                 </div>
               </div>
 
@@ -205,7 +211,7 @@
               <div class="col-md-4 wow slideInLeft" data-wow-duration="1s">
                 <div id="skills-left">
                   <div class="small-heading text-center">
-                    <h5>Fähigkeiten und Kenntnisse</h5>
+                    <h5>Fähigkeiten</h5>
                     <h2>Was kann <br>ich tun?</h2>
                   </div>
                 </div>
@@ -228,7 +234,7 @@
               <li><a href="#skills-machine-learning">Maschinellem Lernen</a></li>
               <li><a href="#skills-programming">Programmierung</a></li>
               <li><a href="#skills-others">Andere Technische Fähigkeiten</a></li>
-              <li><a href="#skills-languages">Sprache</a></li>
+              <li><a href="#skills-languages">Sprachen</a></li>
             </ul>
 
             <!--Skills Tabs Electronics-->
@@ -237,13 +243,13 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-electronics-active-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-micro" role="button">Microcontrollers</a>
+                      <a class="btn btn-general" id="btn-skill-electronics-micro" role="button">Mikrocontroller</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-pcb" role="button">PCB Design</a>
+                      <a class="btn btn-general" id="btn-skill-electronics-pcb" role="button">Leiterplatten-Design</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-iot" role="button">Internet of Things</a>
+                      <a class="btn btn-general" id="btn-skill-electronics-iot" role="button">Internet der Dinge</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-electronics-fpga" role="button">FPGA</a>
@@ -251,8 +257,8 @@
                   </div>
                   <div class="col-md-8 skill-information" id="skill-electronics-information">
                     <div class="skill-information-inner">
-                      <h4>Microcontrollers</h4>
-                      <p class="text-justify">I have a solid understanding of hardware and functionality of Microcontrollers. Other than bare-metal C or C++ Programming, I have experience utilising other tolls such as FreeRTOS in ARM and ESP8266 Microcontrollers.</p>
+                      <h4>Mikrocontroller</h4>
+                      <p class="text-justify">Ich habe ein solides Verständnis für die Hardware und Funktionalität von Mikrocontrollern. Neben der Bare-Metal-C- oder C ++ - Programmierung habe ich Erfahrung mit anderen Tools wie FreeRTOS in ARM- und ESP8266-Mikrocontrollern.</p>
                       <ul class="text-left">
                         <li><em>ARM</em></li>
                         <li><em>AVR / PIC / Arduino</em></li>
@@ -271,22 +277,22 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-ml-active-button">
-                      <a class="btn btn-general" id="btn-skill-ml-ml" role="button">Machine Learning</a>
+                      <a class="btn btn-general" id="btn-skill-ml-ml" role="button">Maschinelles Lernen</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-ml-web" role="button">Web Crawling</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Mining and Analysis</a>
+                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Mining und Analyse</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-aws" role="button">Amazon Web Services</a>
+                      <a class="btn btn-general" id="btn-skill-ml-optimization" role="button">Optimierung</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-justify">I have inquired more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
+                      <h4 class="text-center">Maschinelles Lernen</h4>
+                      <p class="text-justify">Ich habe mich mehr als 3 Jahre lang nach Algorithmen für maschinelles Lernen und Deep Learning erkundigt. R und Python sind die Sprachen, mit denen ich Projekte für künstliche Intelligenz entwickle.</p>
                       <ul class="text-left">
                         <li><em>R / Python</em></li>
                         <li><em>Sci-Kit Learn / MLlib</em></li>
@@ -304,28 +310,28 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-programming-active-button">
-                      <a class="btn btn-general" id="btn-skill-programming-lang" role="button">Languages</a>
+                      <a class="btn btn-general" id="btn-skill-programming-lang" role="button">Programmiersprachen</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-programming-gui" role="button">GUI Design</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-web" role="button">Web Development</a>
+                      <a class="btn btn-general" id="btn-skill-programming-web" role="button">Webentwicklung</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Data Base</a>
+                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Datenbank</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-programming-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Programming Languages</h4>
-                      <p class="text-justify">I know a lot of different Programming Languages for different purposes.</p>
+                      <h4 class="text-center">Programmiersprachen</h4>
+                      <p class="text-justify">Ich kenne viele verschiedene Programmiersprachen für verschiedene Zwecke.</p>
                       <ul class="text-left">
                         <li><em>Python</em></li>
                         <li><em>C / C++ / Cuda C</em></li>
                         <li><em>JavaScript</em></li>
                         <li><em>R</em></li>
-                        <li><em>Matlab</em></li>
+                        <li><em>MATLAB</em></li>
                       </ul>
                     </div>
                   </div>
@@ -339,7 +345,7 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-others-active-button">
-                      <a class="btn btn-general" id="btn-skill-others-network" role="button">Network</a>
+                      <a class="btn btn-general" id="btn-skill-others-network" role="button">Vernetzung</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-git" role="button">Git</a>
@@ -351,13 +357,16 @@
                       <a class="btn btn-general" id="btn-skill-others-linux" role="button">Linux</a>
                     </div>
                     <div class="skill-button">
+                      <a class="btn btn-general" id="btn-skill-others-aws" role="button">Amazon Web Services</a>
+                    </div>
+                    <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-office" role="button">Microsoft Office</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-others-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Network</h4>
-                      <p class="text-justify">I think every electronics engineer should familiarise himself/herself with Networking. I have a solid understanding of how Networking and the Internet work, how routers use IP addresses to route, etc. I should state that I don't know much about configuring Cisco Routers (CCNA).</p>
+                      <h4 class="text-center">Vernetzung</h4>
+                      <p class="text-justify">Ich denke, jeder Elektrotechnikingenieur sollte sich mit Networking vertraut machen. Ich habe ein gutes Verständnis dafür, wie Netzwerke und Internet funktionieren, wie Router IP-Adressen zum Weiterleiten verwenden usw. Ich sollte sagen, dass ich nicht viel über die Konfiguration von Cisco Routern (CCNA) weiß.</p>
                       <ul class="text-left">
                       </ul>
                     </div>
@@ -372,19 +381,19 @@
                 <div class="row">
                   <div class="col-md-4">
                     <div class="skill-button skill-languages-active-button">
-                      <a class="btn btn-general" id="btn-skill-languages-persian" role="button">Persian</a>
+                      <a class="btn btn-general" id="btn-skill-languages-persian" role="button">Persisch</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-languages-english" role="button">English</a>
+                      <a class="btn btn-general" id="btn-skill-languages-english" role="button">Englisch</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-languages-german" role="button">German</a>
+                      <a class="btn btn-general" id="btn-skill-languages-german" role="button">Deutsch</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-languages-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Persian</h4>
-                      <p class="text-justify">Persian is my mother tongue.</p>
+                      <h4 class="text-center">Persisch</h4>
+                      <p class="text-justify">Persisch ist meine Muttersprache.</p>
                       <ul class="text-left">
                       </ul>
                     </div>
@@ -431,11 +440,11 @@
               <div class="education-container">
                 <i class="fas fa-book-reader education-icon"></i>
                 <h3>Bachelor</h3>
-                <h4>Elektrotechnik</h4>
+                <h4>Elektrotechnik<span class="education-med-screen"><br></span></h4>
                 <p class="edu-font"><b>Iranische Universität für Wissenschaft und Teschnologie</b></p>
                 <p class="edu-font"><i>September 2012 - September 2016</i></p>
                 <p>Note: 16.19 von 20</p>
-                <p>Thema der Diplomarbeit: Steuerung eines Überwachungssystems über das Internet</p>
+                <p>Thema der Diplomarbeit: Steuerung eines Überwachungssystems über das Internet <span class="education-med-screen"><br></span></p>
                 <p>Betreuer: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
@@ -447,7 +456,7 @@
                 <p class="edu-font"><b>Iranische Universität für Wissenschaft und Teschnologie</b></p>
                 <p class="edu-font"><i>September 2016 - Juli 2018</i></p>
                 <p>Note: 18.27 von 20</p>
-                <p>Thema der Abschlussarbeit: DPA-resistente Kryptographie für IoT-Zwecke</p>
+                <p>Thema der Masterarbeit: DPA (Differntial Power Analysis)-resistente Kryptographie für IoT-Zwecke</p>
                 <p>Betreuer: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
@@ -647,6 +656,6 @@
     <script src="js/fontawesome.js"></script> <!--Fontawesome-->
     <script src="js/responsive-tabs.js"></script> <!--Responsive Tabs-->
     <script src="js/wow.js"></script> <!--Wow Js-->
-    <script src="js/script.js"></script>
+    <script src="js/script_de.js"></script>
   </body>
 </html>
