--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   <div class="col-md-8 skill-information" id="skill-electronics-information">
                     <div class="skill-information-inner">
                       <h4>Microcontrollers</h4>
-                      <p class="text-justify">I have a solid understanding of hardware and functionality of Microcontrollers. Other than bare-metal C or C++ Programming, I have experience utilising other tolls such as FreeRTOS in ARM and ESP8266 Microcontrollers.</p>
+                      <p class="text-justify">I have a solid understanding of the hardware and functionality of Microcontrollers. Other than bare-metal C or C++ Programming, I have experience utilising other tools such as FreeRTOS in ARM and ESP8266 Microcontrollers.</p>
                       <ul class="text-left">
                         <li><em>ARM</em></li>
                         <li><em>AVR / PIC / Arduino</em></li>
@@ -283,13 +283,13 @@
                       <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Mining and Analysis</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-aws" role="button">Amazon Web Services</a>
+                      <a class="btn btn-general" id="btn-skill-ml-optimization" role="button">Optimization</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-justify">I have inquired more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
+                      <p class="text-justify">I have studied more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
                       <ul class="text-left">
                         <li><em>R / Python</em></li>
                         <li><em>Sci-Kit Learn / MLlib</em></li>
@@ -316,7 +316,7 @@
                       <a class="btn btn-general" id="btn-skill-programming-web" role="button">Web Development</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Data Base</a>
+                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Database</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-programming-information">
@@ -328,7 +328,7 @@
                         <li><em>C / C++ / Cuda C</em></li>
                         <li><em>JavaScript</em></li>
                         <li><em>R</em></li>
-                        <li><em>Matlab</em></li>
+                        <li><em>MATLAB</em></li>
                       </ul>
                     </div>
                   </div>
@@ -352,6 +352,9 @@
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-linux" role="button">Linux</a>
+                    </div>
+                    <div class="skill-button">
+                      <a class="btn btn-general" id="btn-skill-others-aws" role="button">Amazon Web Services</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-office" role="button">Microsoft Office</a>
