deutsch version complete

--- a/de.html
+++ b/de.html
@@ -508,9 +508,9 @@
                 <h3>Forscher</h3>
                 <h4>Iranische Universität für Wissenschaft und Technologie</h4>
                 <h5>Teheran, Iran</h5>
-                <p><i>I worked as the head-researcher in Circuit Design Lab in Electronics Research Center (ERC).<br>
-                  My main responsibility was to help master's and PhD's students in their projects, theses, and seminars. So I teach them python programming, machine learning, and support them with my knowledge and ideas.<br>
-                  Maintaining computers and equipment in the lab was my other responsibility.</i></p>
+                <p><i>Ich habe als leitender Forscher im Circuit Design Lab des Electronics Research Center (ERC) gearbeitet.<br>
+                  Meine Hauptaufgabe war es, Master- und Doktoranden bei ihren Projekten, Abschlussarbeiten und Seminaren zu unterstützen. Also unterrichte ich sie in Python-Programmierung, maschinellem Lernen und unterstütze sie mit meinem Wissen und meinen Ideen.<br>
+                  Die Wartung von Computern und Laboreinrichtung lag auch in meiner Verantwortung.</i></p>
               </div>
             </div>
           </div>
@@ -529,9 +529,9 @@
                 <h3>Übersetzer</h3>
                 <h4>Kook Mobile</h4>
                 <h5>Teheran, Iran</h5>
-                <p><i>I translated more than 50 articles about smartphones and other new digital types of equipment such as smartwatches from English to Persian for Kook Mobile website.<br>
-                  This job was remote, and I accept to work as a translator in order to sharpen my English skills.<br>
-                  Unfortunately, my employer sold the website to another company, so I only worked there for 3 months.</i></p>
+                <p><i>Für die Kook Mobile-Website habe ich mehr als 50 Artikel über Smartphones und andere neue digitale Geräte wie Smartwatches vom Englischen ins Persische übersetzt.<br>
+                  Dieser Job war Remote und ich akzeptiere es, als Übersetzer zu arbeiten, um meine Englischkenntnisse zu verbessern.<br>
+                  Leider hat mein Arbeitgeber die Website an ein anderes Unternehmen verkauft, so dass ich nur 3 Monate dort gearbeitet habe.</i></p>
               </div>
             </div>
           </div>
@@ -550,8 +550,8 @@
                 <h3>Berater</h3>
                 <h4>Fajr-e Khatam Schule</h4>
                 <h5>Teheran, Iran</h5>
-                <p><i>My main responsibility in this job was to support pre-university students to help them in their tests and consult them to schedule their time to the best. <br>
-                  This job was a summer job between my bachelor's and master's, and I only work there for 3 months.</i></p>
+                <p><i>Meine Hauptaufgabe bei diesem Job war es, voruniversitäre Studenten bei ihren Tests zu unterstützen und sie zu konsultieren, um ihre Zeit optimal zu planen.<br>
+                  Dieser Job war ein Sommerjob zwischen meinem Bachelor und meinem Master, und ich arbeitete dort nur für 3 Monate.</i></p>
               </div>
             </div>
           </div>
@@ -570,8 +570,8 @@
                 <h3>Lehrassistent</h3>
                 <h4>Iranische Universität für Wissenschaft und Technologie</h4>
                 <h5>Teheran, Iran</h5>
-                <p><i>My main responsibility was to help students in the computer architecture course to pass the final test, so I solved them many different problems. In the end, I developed a simple computer (presented in Morris Mano book) with Verilog HDL.<br>
-                  I must admit that the teaching assistant is not a job, but it was defiantly an excellent experience.</i></p>
+                <p><i>Meine Hauptaufgabe bestand darin, den Studenten des Computerarchitekturkurses zu helfen, den Abschlusstest zu bestehen. Am Ende entwickelte ich einen einfachen Computer (vorgestellt im Morris Mano-Buch) mit Verilog HDL.<br>
+                  Ich muss zugeben, dass der Lehrassistent kein Job ist, aber es war definitiv eine ausgezeichnete Erfahrung.</i></p>
               </div>
             </div>
           </div>
