--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <h3>Translator</h3>
                 <h4>Kook Mobile</h4>
                 <h5>Tehran, Iran</h5>
-                <p><i>I translated more than 50 articles about smartphones and other new digital types of equipment such as smartwatches from English to Persian for Kook Mobile website.<br>
+                <p><i>I translated more than 50 articles about smartphones and other new digital types of equipment such as smartwatches from English to Persian for the Kook Mobile website.<br>
                   This job was remote, and I accept to work as a translator in order to sharpen my English skills.<br>
                   Unfortunately, my employer sold the website to another company, so I only worked there for 3 months.</i></p>
               </div>
@@ -567,8 +567,8 @@
                 <h3>Teaching Assistant</h3>
                 <h4>Iran University of Science and Technology</h4>
                 <h5>Tehran, Iran</h5>
-                <p><i>My main responsibility was to help students in the computer architecture course to pass the final test, so I solved them many different problems. In the end, I developed a simple computer (presented in Morris Mano book) with Verilog HDL.<br>
-                  I must admit that the teaching assistant is not a job, but it was defiantly an excellent experience.</i></p>
+                <p><i>My main responsibility was to help students in the computer architecture course to pass the final test. In the end, I developed a simple computer (presented in Morris Mano book) with Verilog HDL.<br>
+                  I must admit that the teaching assistant is not a job, but it was definitely an excellent experience.</i></p>
               </div>
             </div>
           </div>
