removing office and some bugs

--- a/de.html
+++ b/de.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -358,9 +358,6 @@
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-aws" role="button">Amazon Web Services</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-office" role="button">Microsoft Office</a>
                     </div>
                   </div>
                   <div class="col-md-8 skill-information" id="skill-others-information">
