adding qml, opencv and network security

--- a/de.html
+++ b/de.html
@@ -297,6 +297,7 @@
                         <li><em>R / Python</em></li>
                         <li><em>Sci-Kit Learn / MLlib</em></li>
                         <li><em>TensorFlow / PyTorch</em></li>
+                        <li><em>OpenCV</em></li>
                       </ul>
                     </div>
                   </div>
@@ -363,7 +364,7 @@
                   <div class="col-md-8 skill-information" id="skill-others-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Vernetzung</h4>
-                      <p class="text-justify">Ich denke, jeder Elektrotechnikingenieur sollte sich mit Networking vertraut machen. Ich habe ein gutes Verständnis dafür, wie Netzwerke und Internet funktionieren, wie Router IP-Adressen zum Weiterleiten verwenden usw. Ich sollte sagen, dass ich nicht viel über die Konfiguration von Cisco Routern (CCNA) weiß.</p>
+                      <p class="text-justify">Ich denke, jeder Elektrotechnikingenieur sollte sich mit Networking vertraut machen. Ich habe ein gutes Verständnis dafür, wie Netzwerke und Internet funktionieren, wie Router IP-Adressen zum Weiterleiten verwenden usw. Ich bin auch mit Kryptografie und Netzwerksicherheitsprotokollen wie SSL / TLS und IPSec vertraut. Ich sollte sagen, dass ich nicht viel über die Konfiguration von Cisco Routern (CCNA) weiß.</p>
                       <ul class="text-left">
                       </ul>
                     </div>
