--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
                         <li><em>R / Python</em></li>
                         <li><em>Sci-Kit Learn / MLlib</em></li>
                         <li><em>TensorFlow / PyTorch</em></li>
+                        <li><em>OpenCV</em></li>
                       </ul>
                     </div>
                   </div>
@@ -360,7 +361,7 @@
                   <div class="col-md-8 skill-information" id="skill-others-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Network</h4>
-                      <p class="text-justify">I think every electronics engineer should familiarise himself/herself with Networking. I have a solid understanding of how Networking and the Internet work, how routers use IP addresses to route, etc. I should state that I don't know much about configuring Cisco Routers (CCNA).</p>
+                      <p class="text-justify">I think every electronics engineer should familiarise himself/herself with Networking. I have a solid understanding of how Networking and the Internet work, how routers use IP addresses to route, etc. I'm also quite familiar with cryptography and network security protocols such as SSL/TLS and IPSec. I should state that I don't know much about configuring Cisco Routers (CCNA).</p>
                       <ul class="text-left">
                       </ul>
                     </div>
