adding agile and deleting comptia

--- a/de.html
+++ b/de.html
@@ -152,7 +152,7 @@
                   <p><strong>Hi, ich bin Arash.</strong> Derzeit arbeite ich als Forscher am Electronics Research Center (ERC) an der Iranische Universität für Wissenschaft und Technologie. Die Programmierung eingebetteter Systeme ist meine Hauptspezialität. Ich habe viele verschiedene Mikrocontroller wie ARM, PIC und AVR programmiert. Zusätzlich habe ich einige IoT-basierte Projekte mit Raspberry PI, Arduino und verwandten Modulen entwickelt. Maschinelles Lernen ist mein anderes Interessengebiet. Ich habe mehr als 3 Jahre lang traditionelle Algorithmen für maschinelles Lernen und Deep Learning kennengelernt und einige Projekte mit Deep Learning Frameworks entwickelt.</p>
                   <p>Darüber hinaus ist eines meiner Interessen das Programmieren. Ich beherrsche einige der Programmiersprachen wie Python, JavaScript, C / C ++ usw. Mein Interessengebiet in der Programmierdomäne, abgesehen von der eingebetteten Entwicklung, ist GUI-Design und Webentwicklung. Ich habe einige Desktop-Apps mit PyQt und zwei Smartphone-Apps mit React Native entwickelt. Ich betrachte mich nicht als erfahrener Webentwickler, bin aber mit der Frontend- und Backend-Entwicklung vertraut.</p>
 									<p>Ich habe meinen Master-Abschluss in digitalen elektronischen Systemen als der beste Student in meinem Studienfach an der Iranischen Universität für Wissenschaft und Technologie gemacht, an der ich auch meinen Bachelor-Abschluss erworben habe.</p>
-									<p>Ich habe viele Hobbys wie Filme und Serien schauen, Bücher lesen usw., aber neue Fähigkeiten zu erlernen und Kenntnisse über Gebieten zu erwerben, die ich gerne kennen wolle, ist das wertvollste Hobby, das ich habe. Neben den oben genannten Fähigkeiten, die ich im Fähigkeitenbereich näher erläutern werde, lese ich gerne Bücher über Physik, Genetik und Geschichte. Zusätzlich, bin ich ein guter Teamplayer, ein schneller Lerner und eine energische Person.</p>
+									<p>Ich habe viele Hobbys wie Filme und Serien schauen, Bücher lesen usw., aber neue Fähigkeiten zu erlernen und Kenntnisse über Gebieten zu erwerben, die ich gerne kennen wolle, ist das wertvollste Hobby, das ich habe. Ich lese gerne Bücher über Physik, Genetik und Geschichte. Zusätzlich, bin ich ein guter Teamplayer, ein schneller Lerner und eine energische Person.</p>
                 </div>
               </div>
 
@@ -263,7 +263,6 @@
                         <li><em>ARM</em></li>
                         <li><em>AVR / PIC / Arduino</em></li>
                         <li><em>FreeRTOS</em></li>
-                        <li><em>C / C++ / Assembly</em></li>
                       </ul>
                     </div>
                   </div>
@@ -292,9 +291,8 @@
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Maschinelles Lernen</h4>
-                      <p class="text-justify">Ich habe mich mehr als 3 Jahre lang nach Algorithmen für maschinelles Lernen und Deep Learning erkundigt. R und Python sind die Sprachen, mit denen ich Projekte für künstliche Intelligenz entwickle.</p>
+                      <p class="text-justify">Ich habe mich mehr als 2 Jahre lang nach Algorithmen für maschinelles Lernen und Deep Learning erkundigt. Außerdem habe ich ein solides Verständnis für traditionelle Bildverarbeitungstechniken.</p>
                       <ul class="text-left">
-                        <li><em>R / Python</em></li>
                         <li><em>Sci-Kit Learn / MLlib</em></li>
                         <li><em>TensorFlow / PyTorch</em></li>
                         <li><em>OpenCV</em></li>
@@ -333,6 +331,7 @@
                         <li><em>JavaScript</em></li>
                         <li><em>R</em></li>
                         <li><em>MATLAB</em></li>
+                        <li><em>Assembly</em></li>
                       </ul>
                     </div>
                   </div>
@@ -352,7 +351,7 @@
                       <a class="btn btn-general" id="btn-skill-others-git" role="button">Git</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-comptia" role="button">CompTIA A+</a>
+                      <a class="btn btn-general" id="btn-skill-others-comptia" role="button">Agile Softwareentwicklung</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-linux" role="button">Linux</a>
