--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <p><strong>Hi, I'm Arash.</strong> I currently work at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST) as a researcher. Programming of Embedded Systems is my main speciality. I have programmed many different Microcontrollers like ARM, PIC, and AVR. Additionally, I developed some IoT-based projects with Raspberry PI, Arduino, and related modules as well. Machine Learning is my other field of interest. I have learned about traditional Machine Learning algorithms and Deep Learning for more than 3 years and developed some projects using Deep Learning Frameworks.</p>
                   <p>Furthermore, one of my interests is programming. I have an excellent command of some of the programming languages such as Python, JavaScript, C/C++, etc. My field of interest in the programming domain, other than embedded development, is GUI Design and Web Development. I developed some Desktop applications using PyQt, and two smartphone applications with React Native. I do not consider myself a skilled web-developer, but I'm familiar with Frontend and Backend development.</p>
 									<p>I have a Master's Degree in Digital Electronics Systems and graduated as the best student of the year in my field of study from Iran University of Science and Technology, where I have obtained my Bachelor's as well.</p>
-									<p>I have many hobbies such as watching movies and series, reading books, etc., but learning new skills and gain knowledge about things I love to know about is the most valuable hobby I have. Besides the aforementioned skills, which I'll explain more in the Skills section, I love to read books about physics, genetics, and history. Apart from all of these, I am a good team-player, a fast learner, and an energetic person.</p>
+									<p>I have many hobbies such as watching movies and series, reading books, etc., but learning new skills and gain knowledge about things I love to know about is the most valuable hobby I have. I love to read books about physics, genetics, and history. Apart from all of these, I am a good team-player, a fast learner, and an energetic person.</p>
                 </div>
               </div>
 
@@ -260,7 +260,6 @@
                         <li><em>ARM</em></li>
                         <li><em>AVR / PIC / Arduino</em></li>
                         <li><em>FreeRTOS</em></li>
-                        <li><em>C / C++ / Assembly</em></li>
                       </ul>
                     </div>
                   </div>
@@ -289,9 +288,8 @@
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-justify">I have studied more than 3 years about Machine Learning and Deep Learning algorithms. R and Python are the languages I use to develop artificial intelligence projects.</p>
+                      <p class="text-justify">I have studied more than 2 years about Machine Learning and Deep Learning algoriths. Besides, I have a solid understanding of traditional digital image processing techniques.</p>
                       <ul class="text-left">
-                        <li><em>R / Python</em></li>
                         <li><em>Sci-Kit Learn / MLlib</em></li>
                         <li><em>TensorFlow / PyTorch</em></li>
                         <li><em>OpenCV</em></li>
@@ -330,6 +328,7 @@
                         <li><em>JavaScript</em></li>
                         <li><em>R</em></li>
                         <li><em>MATLAB</em></li>
+                        <li><em>Assembly</em></li>
                       </ul>
                     </div>
                   </div>
@@ -349,7 +348,7 @@
                       <a class="btn btn-general" id="btn-skill-others-git" role="button">Git</a>
                     </div>
                     <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-comptia" role="button">CompTIA A+</a>
+                      <a class="btn btn-general" id="btn-skill-others-comptia" role="button">Agile Software Development</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-linux" role="button">Linux</a>
